--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "exports": "./server.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "mysql2": "^2.3.2",
+    "nodemon": "^2.0.14",
+    "typeorm": "^0.2.38"
   },
   "scripts": {
     "dev": "nodemon server.js"
