--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.14",
     "typeorm": "^0.2.38"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node  server.js"
   }
 }
