--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.2",
     "nodemailer": "^6.7.0",
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.14"
   },
   "scripts": {
-    "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node  server.js"
+    "start": "NODE_ENV=production node --experimental-modules --es-module-specifier-resolution=node server.js",
+    "dev": "NODE_ENV=development nodemon --experimental-modules --es-module-specifier-resolution=node server.js"
   }
 }
