--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "multer": "1.3.0",
     "mysql2": "^2.3.2",
     "nodemailer": "^6.7.0",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.4.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node --experimental-modules --es-module-specifier-resolution=node server.js",
